stateless-poc-I/httpd/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
    - name: modcluster
      port: 8666
      targetPort: 8666
  selector:
    app: httpd
